# edgeware-node

./: .ackrc  .dockerignore  .dockerignore.remoteCargo  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.cwci  README.md  RemoteCargo.dockerfile  RemoteCargo.dockerfile.dockerignore  build.rs  build.sh  build_and_run_devnet.sh  chainspec.json  cwci-start.sh  docker-compose.yml  edgeware_testnet.json  gen-docs.sh  keygen.sh  lockdrop.json  lockdrop_allocations.json  migration.md  purge-chain.sh  rust-toolchain  rustfmt.toml  setup.sh
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  rust.yml
chains/: README.md  balances.json  beresheet.json  berlin.json  chaingang.json  launch.json  mainnet.json  multi-dev.chainspec.json  old-dev.chainspec.json  testnet-0.9.0.compact.wasm  testnet-0.9.1.compact.wasm  testnet-0.9.2.compact.wasm  testnet.chainspec.json  testnet.json
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/: lib.rs
client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  raw.rs  trace_filter.rs
client/evm-tracing/src/listeners/: call_list.rs  raw.rs
client/evm-tracing/src/types/: serialization.rs  single.rs
docker/: Dockerfile  Dockerfile.local  Dockerfile4  beresheet.yml  docker-compose-2.yml  docker-compose.yml  mainnet.yml
docs/: CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc
edge_bench_1/: edge_assets.rs  edge_assets_data  edge_ren.rs  edge_ren_data
edge_bench_2/: edge_ren_1.rs  edge_ren_data_1
edge_bench_3/: edge_ren_1.rs  edge_ren_data_1
migrations/democracy/: Cargo.toml
migrations/democracy/src/: lib.rs
modules/chainbridge/: Cargo.toml
modules/chainbridge/src/: lib.rs  mock.rs
modules/edge-assets/: Cargo.toml
modules/edge-assets/src/: benchmarking.rs  lib.rs  token_traits.rs  traits.rs  weights.rs
modules/edge-chainbridge/: Cargo.toml
modules/edge-chainbridge/src/: lib.rs  mock.rs  tests.rs
modules/edge-delegation/: Cargo.toml  README.md
modules/edge-governance/: Cargo.toml  README.md
modules/edge-governance/src/: governance.rs  lib.rs
modules/edge-identity/: .gitignore  Cargo.toml  README.md
modules/edge-identity/src/: identity.rs  lib.rs  tests.rs
modules/edge-merkletree/: Cargo.toml
modules/edge-merkletree/src/: lib.rs  merkle_tree.rs
modules/edge-ren/: Cargo.toml
modules/edge-ren/benchmarking/: Cargo.toml
modules/edge-ren/benchmarking/src/: lib.rs  mock.rs
modules/edge-ren/src/: benchmarking.rs  lib.rs  mock.rs  test.rs  tests.rs  weights.rs
modules/edge-signaling/: Cargo.toml  README.md
modules/edge-signaling/src/: benchmarking.rs  default_weight.rs  lib.rs  signaling.rs  tests.rs
modules/edge-treasury-reward/: Cargo.toml
modules/edge-treasury-reward/src/: inflation.rs  lib.rs  mock.rs  tests.rs  treasury_reward.rs
modules/edge-voting/: Cargo.toml  README.md
modules/edge-voting/src/: benchmarking.rs  default_weight.rs  lib.rs  tests.rs  voting.rs
modules/edge-x/: Cargo.toml
modules/edge-x/src/: lib.rs  test.rs
node/cli/: Cargo.toml  build.rs
node/cli-opt/: Cargo.toml
node/cli-opt/src/: lib.rs
node/cli/browser-demo/: ws.js
node/cli/lockdrop/: lockdrop-allocation.json
node/cli/res/: beresheetv3.chainspec.json  rococo-local.json
node/cli/src/: .service.rs.swp  browser.rs  chain_spec.rs  cli.rs  command.rs  factory_impl.rs  grandpa_support.rs  lib.rs  mainnet_fixtures.rs  service.rs  testnet_fixtures.rs
node/cli/src/chain_spec/: beresheet.rs  development.rs  mainnet.rs  mod.rs
node/debug/: Cargo.toml
node/evm_tracer/: Cargo.toml
node/executor/: Cargo.toml
node/executor/benches/: bench.rs
node/executor/src/: lib.rs
node/inspect/: Cargo.toml
node/inspect/src/: cli.rs  command.rs  lib.rs
node/opts/: Cargo.toml
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc-client/: Cargo.toml
node/rpc-client/src/: main.rs
node/rpc/src/: accounts.rs  client.rs  formatge.rs  lib.rs  tracing.rs
node/runtime/: Cargo.toml  build.rs
node/runtime-interface/: Cargo.toml
node/runtime-interface/src/: lib.rs
node/runtime/beresheet/: Cargo.toml  build.rs
node/runtime/client/: Cargo.toml
node/runtime/client/src/: lib.rs
node/runtime/development/: Cargo.toml
node/runtime/edgeware/: Cargo.toml
node/runtime/edgeware/src/: constants.rs  impls.rs  lib.rs
node/runtime/mainnet/: Cargo.toml
node/runtime/mainnet/src/: constants.rs
node/runtime/src/: constants.rs  impls.rs  lib.rs  migrations.rs  precompiles.rs  voter_bags.rs
node/runtime/src/precompiles/: blake2.rs  bls.rs  bn128.rs  ed25519.rs  mod.rs  modexp.rs
node/runtime/src/weights/: mod.rs  pallet_balances.rs  pallet_democracy.rs  pallet_utility.rs  signaling.rs  voting.rs
node/runtime/wasm/: Cargo.toml  build.sh
node/runtime/wasm/src/: lib.rs
node/service/: Cargo.toml
node/service/src/: allocation.json  chain_spec.rs  fixtures.rs  genesis.json  lib.rs  mainnet_fixtures.rs  spec.json  testnet_fixtures.rs
node/src/: chain_spec.rs  cli.rs  error.rs  main.rs  service.rs
node/testing/: Cargo.toml
node/testing/src/: client.rs  genesis.rs  keyring.rs  lib.rs
node/transaction-factory/: Cargo.toml
node/transaction-factory/src/: complex_mode.rs  lib.rs  modes.rs  simple_modes.rs
node/txpool/: Cargo.toml
pallets/edge-treasury-reward/: Cargo.toml
pallets/edge-treasury-reward/src/: lib.rs  mock.rs  tests.rs
pallets/nft/: Cargo.toml
pallets/orml-nft/: Cargo.toml
primitives/account/: Cargo.toml
primitives/ext/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/wasm/: Cargo.toml  build.sh
scripts/: build-only-wasm.sh  build.sh  build_only_wasm.sh  common.sh  docker-destroy.sh  docker-info.sh  graft-state.js  init-ci.sh  init.sh  keygen-10.sh  keygen.sh  prometheus_setup.sh  purge-chain.sh  setup-docker.sh  setup_run_node.sh  start.sh  system-info.sh  test.sh  update.sh  val-setup.sh
src/: chain_spec.rs  cli.rs  cli.yml  main.rs  service.rs
subkey/: Cargo.toml
testnets/v0.0.1/: edgeware_testnet.json
ts-tests/: index.spec.ts  package.json
types/: v46.json
(+148 files in other folders)
