[workspace]
members = [
	"client/rpc/debug",
	"client/rpc/trace",
	"client/rpc/txpool",
	"client/rpc-core/debug",
	"client/rpc-core/trace",
	"client/rpc-core/txpool",
	"pallets/edge-treasury-reward",
	"pallets/orml-nft",
	"pallets/nft",
	"node/cli",
	"node/opts",
	"node/executor",
	"node/evm_tracer",
	"node/primitives",
	"node/opts",
	"node/rpc",
	"node/rpc-client",
	"node/runtime",
	"node/runtime-interface",
	"node/debug",
	"node/txpool",
]
exclude = ["vendor"]

[profile.release]
# Edgeware runtime requires unwinding.
panic = "unwind"

[profile.dev.package]
aes-soft = { opt-level = 3 }
aesni = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

# Generated with: `cargo lock -s | grep substrate.git | cut -d' ' -f2 | awk '{print $0, "= { git = \"https://github.com/webb-tools/substrate.git\", rev = \"22f09c602704aeee2b59b14f427f73f6cb8b5e2f\" }"}'`
# Make sure to have cargo-lock installed with: `cargo install cargo-lock --features=cli`

[patch.crates-io]
# frontier deps
fc-consensus = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
fc-rpc = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
fc-rpc-core = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
fp-consensus = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
fp-evm = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
fp-rpc = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
pallet-evm = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
pallet-evm-precompile-ed25519 = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
pallet-evm-precompile-modexp = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }
pallet-evm-precompile-simple = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4-benchmarking" }

# substrate deps
sc-finality-grandpa-warp-sync = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
fork-tree = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-benchmarking = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-benchmarking-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-executive = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-metadata = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-support = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-support-procedural = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-support-procedural-tools = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-support-procedural-tools-derive = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frame-system-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-assets = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-authority-discovery = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-balances = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-bounties = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-collective = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-contracts = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-contracts-primitives = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-contracts-proc-macro = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-contracts-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-democracy = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-elections-phragmen = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-election-provider-multi-phase = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-identity = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-im-online = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-indices = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-multisig = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-offences = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-proxy = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-randomness-collective-flip = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-recovery = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-scheduler = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-session = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-staking = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-staking-reward-curve = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-sudo = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-timestamp = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-tips = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-transaction-payment = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-transaction-payment-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-treasury = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-utility = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
pallet-vesting = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-authority-discovery = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-basic-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-block-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-chain-spec = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-chain-spec-derive = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-client-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-client-db = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-consensus-babe = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-consensus-epochs = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-consensus-slots = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-consensus-uncles = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-executor = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-executor-common = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-executor-wasmi = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-executor-wasmtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-finality-grandpa-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-informant = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-keystore = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-light = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-network = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-network-gossip = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-offchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-peerset = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-proposer-metrics = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-rpc-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-rpc-server = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-service = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-state-db = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-telemetry = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-tracing = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-transaction-graph = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-allocator = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-api-proc-macro = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-application-crypto = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-arithmetic = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-authority-discovery = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-block-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-blockchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-chain-spec = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-consensus-babe = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-consensus-slots = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-consensus-vrf = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-core = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-database = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-debug-derive = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-externalities = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-inherents = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-io = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-keyring = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-keystore = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-npos-elections = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-npos-elections-compact = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-offchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-panic-handler = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-runtime-interface = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-runtime-interface-proc-macro = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-sandbox = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-serializer = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-session = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-staking = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-state-machine = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-std = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-storage = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-tasks = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-timestamp = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-tracing = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-trie = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-utils = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-version = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-wasm-interface = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
substrate-browser-utils = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
substrate-frame-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
substrate-frame-rpc-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
substrate-prometheus-endpoint = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
