[workspace]
members = [
	"client/rpc/debug",
	"client/rpc/trace",
	"client/rpc/txpool",
	"client/rpc-core/debug",
	"client/rpc-core/trace",
	"client/rpc-core/txpool",
	"pallets/edge-treasury-reward",
	"node/cli",
	"node/opts",
	"node/executor",
	"node/evm_tracer",
	"node/primitives",
	"node/opts",
	"node/rpc",
	"node/rpc-client",
	"node/runtime",
	"node/runtime-interface",
	"node/debug",
	"node/txpool",
]
exclude = ["vendor"]

[profile.release]
# Edgeware runtime requires unwinding.
panic = "unwind"
codegen-units=1

[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

# Generated with: `cargo lock -s | grep substrate.git | cut -d' ' -f2 | awk '{print $0, "= { git = \"https://github.com/webb-tools/substrate.git\", rev = \"22f09c602704aeee2b59b14f427f73f6cb8b5e2f\" }"}'`
# Make sure to have cargo-lock installed with: `cargo install cargo-lock --features=cli`

[patch.crates-io]
# frontier deps
fc-consensus = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
fc-rpc = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
fc-rpc-core = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
fp-consensus = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
fp-evm = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
fp-rpc = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
pallet-evm = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
pallet-evm-precompile-ed25519 = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
pallet-evm-precompile-modexp = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }
pallet-evm-precompile-simple = { git = "https://github.com/webb-tools/frontier.git", branch = "erup-4" }

# substrate deps
sc-finality-grandpa-warp-sync = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
fork-tree = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-benchmarking = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-benchmarking-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-executive = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-metadata = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-support = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-support-procedural = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-support-procedural-tools = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-support-procedural-tools-derive = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-system-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-assets = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-authority-discovery = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-balances = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-bounties = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-collective = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-contracts = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-contracts-primitives = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-contracts-proc-macro = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-contracts-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-democracy = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-elections-phragmen = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-election-provider-multi-phase = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-identity = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-im-online = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-indices = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-multisig = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-offences = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-proxy = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-randomness-collective-flip = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-recovery = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-scheduler = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-session = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-staking = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-staking-reward-curve = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-sudo = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-timestamp = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-tips = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-transaction-payment = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-transaction-payment-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-treasury = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-utility = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-vesting = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-authority-discovery = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-basic-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-block-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-chain-spec = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-chain-spec-derive = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-client-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-client-db = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-consensus-babe = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-consensus-epochs = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-consensus-slots = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-consensus-uncles = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-executor = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-executor-common = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-executor-wasmi = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-executor-wasmtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-finality-grandpa-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-informant = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-keystore = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-light = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-network = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-network-gossip = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-offchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-peerset = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-proposer-metrics = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-rpc-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-rpc-server = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-service = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-state-db = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-telemetry = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-tracing = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-transaction-graph = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-allocator = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-api-proc-macro = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-application-crypto = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-arithmetic = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-authority-discovery = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-block-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-blockchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-chain-spec = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-consensus-babe = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-consensus-slots = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-consensus-vrf = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-core = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-database = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-debug-derive = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-externalities = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-inherents = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-io = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-keyring = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-keystore = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-npos-elections = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-npos-elections-compact = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-offchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-panic-handler = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-runtime-interface = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-runtime-interface-proc-macro = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-sandbox = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-serializer = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-session = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-staking = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-state-machine = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-std = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-storage = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-tasks = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-timestamp = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-tracing = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-trie = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-utils = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-version = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-wasm-interface = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
substrate-browser-utils = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
substrate-frame-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
substrate-frame-rpc-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
substrate-prometheus-endpoint = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
