[workspace]
members = [
	"client/evm-tracing",
	"client/rpc/debug",
	"client/rpc/trace",
	"client/rpc/txpool",
	"client/rpc-core/debug",
	"client/rpc-core/trace",
	"client/rpc-core/txpool",
	"pallets/edge-treasury-reward",
	"node/cli",
	"node/cli-opt",
	"node/executor",
	"primitives/rpc/evm-tracing-events",
	"node/primitives",
	"node/rpc",
	"node/runtime",
	"node/runtime-interface",
	"primitives/rpc/debug",
	"primitives/rpc/txpool",
	"utils/frame/generate-bags",
	"utils/frame/generate-bags/node-runtime",
]
exclude = ["vendor"]

[profile.release]
# Edgeware runtime requires unwinding.
panic = "unwind"
codegen-units=1

[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
