[package]
name = "edgeware-runtime"
version = "0.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = "2.0"
parity-codec-derive = "2.0"
sr-std = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
sr-io = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-support = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
substrate-keyring = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-balances = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-consensus = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-aura = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-executive = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
sr-primitives = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-session = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-system = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-timestamp = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "v0.9", optional = true }
sr-version = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate", branch = "v0.9" }
edge_delegation = { git = "https://github.com/hicommonwealth/edge_delegation" }
edge_bridge = { git = "https://github.com/hicommonwealth/edge_bridge" }
edge_governance = { git = "https://github.com/hicommonwealth/edge_governance" }
edge_identity = { git = "https://github.com/hicommonwealth/edge_identity" }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"substrate-client/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-executive/std",
	"srml-aura/std",
	"sr-primitives/std",
	"srml-session/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"serde_derive",
	"serde/std",
	"safe-mix/std",
	"substrate-client",
	"substrate-consensus-aura-primitives/std",
  "edge_delegation/std",
  "edge_bridge/std",
  "edge_governance/std",
  "edge_identity/std",
]
